The repo is now organized. Resources now have its own folder.

--- a/crsApp/nbproject/project.properties
+++ b/crsApp/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=crsApp
-main.class=main_course_recovery_plan
+main.class=crsAppPackage.main_course_recovery_plan
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -94,4 +94,5 @@ run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
+src.Resources.dir=Resources
 test.src.dir=test
