--- a/crsApp/nbproject/project.properties
+++ b/crsApp/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=crsApp
-main.class=crsAppPackage.main_course_recovery_plan
+main.class=crsAppPackage.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
