Some changes (unfinished)

--- a/crsApp/nbproject/project.properties
+++ b/crsApp/nbproject/project.properties
@@ -35,9 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/crsApp
 endorsed.classpath=
 excludes=
+file.reference.mail-1.4.7__1_.jar=C:\\New folder\\mail-1.4.7 (1).jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mail-1.4.7__1_.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
